moving managed router higher on customer page

--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -3,59 +3,63 @@
   {{#with customer}}
   <h3>{{ showTitle }} <span class="pull-right">{{ customerId }}</span></h3><hr />
   <div class="row">
-    <form class="form-horizontal col-md-8">
-      <div class="form-group">
-        <label for="firstname" class="col-sm-3 control-label">First Name</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="firstName" fieldValue=firstName fieldPlaceholder="First Name" }}
+    <form class="form-horizontal">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="firstname" class="col-sm-3 control-label">First Name</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="firstName" fieldValue=firstName fieldPlaceholder="First Name" }}
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lastname" class="col-sm-3 control-label">Last Name</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="lastName" fieldValue=lastName fieldPlaceholder="Last Name" }}
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="companyname" class="col-sm-3 control-label">Company Name</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="company" fieldValue=company fieldPlaceholder="Company Name" }}
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="phone" class="col-sm-3 control-label">Phone</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="phone" fieldValue=phone fieldPlaceholder="Phone" }}
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email" class="col-sm-3 control-label">Email</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="email" fieldValue=email fieldPlaceholder="Email" }}
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="lastname" class="col-sm-3 control-label">Last Name</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="lastName" fieldValue=lastName fieldPlaceholder="Last Name" }}
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="address" class="col-sm-3 control-label">Address</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="address" fieldValue=address fieldPlaceholder="Address" }}
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="companyname" class="col-sm-3 control-label">Company Name</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="company" fieldValue=company fieldPlaceholder="Company Name" }}
+        <div class="form-group">
+          <label for="city" class="col-sm-3 control-label">City</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="city" fieldValue=city fieldPlaceholder="City" }}
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="phone" class="col-sm-3 control-label">Phone</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="phone" fieldValue=phone fieldPlaceholder="Phone" }}
+        <div class="form-group">
+          <label for="state" class="col-sm-3 control-label">State</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="state" fieldValue=state fieldPlaceholder="State" }}
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="email" class="col-sm-3 control-label">Email</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="email" fieldValue=email fieldPlaceholder="Email" }}
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="address" class="col-sm-3 control-label">Address</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="address" fieldValue=address fieldPlaceholder="Address" }}
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="city" class="col-sm-3 control-label">City</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="city" fieldValue=city fieldPlaceholder="City" }}
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="state" class="col-sm-3 control-label">State</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="state" fieldValue=state fieldPlaceholder="State" }}
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="zip" class="col-sm-3 control-label">Zip</label>
-        <div class="col-sm-6">
-          {{ > wtBraintreeClickToEdit fieldName="zip" fieldValue=zip fieldPlaceholder="Zip" }}
+        <div class="form-group">
+          <label for="zip" class="col-sm-3 control-label">Zip</label>
+          <div class="col-sm-6">
+            {{ > wtBraintreeClickToEdit fieldName="zip" fieldValue=zip fieldPlaceholder="Zip" }}
+          </div>
         </div>
       </div>
     </form>
@@ -70,7 +74,13 @@
     </div>
   </div>
   {{/if}}
-  <h4>Payment Methods</h4>
+  {{#if customer}}
+  {{#with customer}}
+    <h4>Managed Routers</h4><hr/>
+    {{ > wtManagedRouterMySQLList hideSearchField=true customerId=customerId}}
+  {{/with}}
+  {{/if}}  
+  <h4>Billing Information</h4><hr/>
   <div class="row">
     <div class="col-sm-12">
       {{#if showPaymentAddForm}}
@@ -95,13 +105,6 @@
       {{ > wtBraintreeEditPaymentMethodForm }}
     </div>
   </div>
-  {{/if}}
-
-  {{#if customer}}
-  {{#with customer}}
-    <h4>Managed Routers</h4><hr>
-    {{ > wtManagedRouterMySQLList hideSearchField=true customerId=customerId}}
-  {{/with}}
   {{/if}}
 </template>
 
