--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -1,7 +1,7 @@
 <template name="wtBraintreeEditCustomer">
   {{#if customer}}
   {{#with customer}}
-  <h3>{{ showTitle }} <span class="pull-right">{{ customerId }}</span></h3><hr />
+  <h3>{{ showTitle }}<span class="pull-right">Customer: {{ customerId }}</span></h3><hr />
   <div class="row">
     <form class="form-horizontal">
       <div class="col-md-6">
