--- a/packages/wisptools:manage-domain-users/client/templates/manage-domain-users.html
+++ b/packages/wisptools:manage-domain-users/client/templates/manage-domain-users.html
@@ -1,13 +1,10 @@
 <template name="wtManageDomainUsers">
-  <h3>Manage Domain Users</h3><hr />
+  <h3>Manage Users</h3><hr />
   <table class="col-md-12 table">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Email</th>
-        <th>Roles</th>
-        <th>Created At</th>
-        <th>Status</th>
+        <th>User Email</th>
+        <th>Enabled</th>
         <th>Action</th>
       </tr>
     </thead>
@@ -15,10 +12,7 @@
       {{#if domainUsers}}
         {{#each domainUsers}}
         <tr>
-          <td>{{ _id }}</td>
           <td>{{ email }}</td>
-          <td>{{ roles }}</td>
-          <td>{{ createdAt }}</td>
           <td>
             {{#if isEnabled}}
               <i class="fa fa-check text-success"></i>
@@ -31,9 +25,9 @@
               You cannot disable your own account.
             {{else}}
               {{#if isEnabled}}
-                <button class="btn btn-danger btn-xs disableBtn">Disable</button>
+                <button class="btn btn-danger btn-xs disableBtn">Disable Login</button>
               {{else}}
-                <button class="btn btn-success btn-xs enableBtn">Enable</button>
+                <button class="btn btn-success btn-xs enableBtn">Enable Login</button>
               {{/if}}
             {{/if}}
           </td>
