adding netTALK branded page

--- a/application/client/templates/home.html
+++ b/application/client/templates/home.html
@@ -43,3 +43,14 @@
     <p>This application is used to manage World Wide Supply routers and other TR-069 capable devices.</p>
   </center>
 </template>
+
+<template name='home-nettalk'>
+  <center>
+    <h2>Welcome to the netTALK device control portal</h2>
+    <br />
+    <h3>Easily Manage</h3>
+    <h3>Wi-Fi Routers, LTE Routers, DSL Routers, ATAs, & IP Phones</h3>
+    <br />
+    <p>Powered by ReadyNet</p>
+  </center>
+</template>
